// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReferenceList /> snapshots cited and uncited list populated 1`] = `
<div>
  <Spinner
    bgColor="#f5f5f5"
    height="52px"
    size="40px"
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {
            "1": Object {
              "id": "3",
              "title": "citation 3",
            },
          },
          "byIndex": Array [],
        },
        "links": "always",
        "locale": "en_US",
      }
    }
  />
  <style
    jsx={true}
  >
    
                        div {
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        }
                    
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots cited and uncited list populated 2`] = `
<div>
  <Spinner
    bgColor="#f5f5f5"
    height="52px"
    size="40px"
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {
            "1": Object {
              "id": "3",
              "title": "citation 3",
            },
          },
          "byIndex": Array [
            Object {
              "citationItems": Array [
                Object {
                  "id": "1",
                  "item": Object {
                    "id": "1",
                    "title": "citation 1",
                  },
                },
                Object {
                  "id": "2",
                  "item": Object {
                    "id": "2",
                    "title": "citation 2",
                  },
                },
              ],
              "properties": Object {
                "index": 0,
              },
            },
          ],
        },
        "links": "always",
        "locale": "en_US",
      }
    }
  />
  <style
    jsx={true}
  >
    
                        div {
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        }
                    
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots initial mount with empty state 1`] = `
<div>
  <Spinner
    bgColor="#f5f5f5"
    height="52px"
    size="40px"
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "links": "always",
        "locale": "en_US",
      }
    }
  />
  <style
    jsx={true}
  >
    
                        div {
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        }
                    
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots initial mount with empty state 2`] = `
<div>
  <Spinner
    bgColor="#f5f5f5"
    height="52px"
    size="40px"
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "links": "always",
        "locale": "en_US",
      }
    }
  />
  <style
    jsx={true}
  >
    
                        div {
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        }
                    
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots menu toggled open 1`] = `
<div>
  <Spinner
    bgColor="#f5f5f5"
    height="52px"
    size="40px"
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "links": "always",
        "locale": "en_US",
      }
    }
  />
  <style
    jsx={true}
  >
    
                        div {
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        }
                    
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots pinned state toggled 1`] = `
<div>
  <Spinner
    bgColor="#f5f5f5"
    height="52px"
    size="40px"
  />
  <StorageField
    store={
      Store {
        "bibOptions": Object {
          "heading": "",
          "headingLevel": "h3",
          "style": "fixed",
        },
        "citationStyle": "american-medical-association",
        "citations": CitationStore {
          "CSL": Object {},
          "byIndex": Array [],
        },
        "links": "always",
        "locale": "en_US",
      }
    }
  />
  <style
    jsx={true}
  >
    
                        div {
                            box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba(0, 0, 0, .24), 0 -1px 0 rgba(16, 22, 26, .10);
                        }
                    
  </style>
</div>
`;

exports[`<ReferenceList /> snapshots should match StorageField snapshot 1`] = `
<input
  name="abt-reflist-state"
  type="hidden"
  value="{\\"CSL\\":{},\\"cache\\":{\\"links\\":\\"always\\",\\"locale\\":\\"en_US\\",\\"style\\":\\"american-medical-association\\"},\\"citationByIndex\\":[]}"
/>
`;
